# 001_reinforcement_qlearning_with_targetnetwork

./: README.md  README_commands_howto.md  pyproject.toml  readme_handling.md  requirements.txt
configs/: compare_config.yaml  default.yaml  sim_config.yaml
results/: sim_record_target_1000ep.json  trained_model.keras  trained_model_final.keras  weights_target_1ep_finetuned.json  weights_target_2000ep_finetuned.json  weights_target_network_1000ep.json
results/sim_target_weights_target_2000ep_finetuned_20260501_194605/: sim_config_used.json
sim_results/: sim_weights_target_2000ep_finetuned.json
src/: environment.py
src/q_network/: __init__.py  agent.py  compare.py  environment.py  model.py  train.py  visualize.py
tests/: test_agent.py  test_environment.py  test_model.py  visual_test_physics.py
